--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -1,53 +1,77 @@
 .blue {
-  background-color: blue;
+    background-color: blue;
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 span {
-  color: white;
+    color: white;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .container2 {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    align-items: center;
 }
 
 span {
-  color: black;
+    color: black;
 }
 
 ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
 }
 
 ul li {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
 .bg-img {
-  padding: 200px;
-  background-size: cover;
+    padding: 200px;
+    background-size: cover;
 }
 
+
+.home-container {
+    background-color: black;
+    padding: 50px;
+}
+
+.prodotti {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 0 auto;
+
+}
+
+h5 {
+    color: white;
+    text-align: center;
+}
+
+.card {
+    width: calc(100% / 6 - 20px);
+    margin: 10px;
+
+}
