--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -1,4 +1,5 @@
 @import 'partials/header1.scss';
 @import 'partials/common.scss';
 @import 'partials/header2.scss';
-@import 'partials/header3.scss'
+@import 'partials/header3.scss';
+@import 'partials/home.scss;'
