creo primo footer

--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -2,4 +2,6 @@
 @import 'partials/common.scss';
 @import 'partials/header2.scss';
 @import 'partials/header3.scss';
-@import 'partials/home.scss;'
+@import 'partials/home.scss';
+@import 'partials/footer1.scss';
+
