--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -1,77 +1,103 @@
 .blue {
-    background-color: blue;
+  background-color: blue;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
-span {
-    color: white;
+.container span {
+  color: white;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container2 {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  align-items: center;
 }
 
 span {
-    color: black;
+  color: black;
 }
 
 ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 ul li {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .bg-img {
-    padding: 200px;
-    background-size: cover;
+  padding: 200px;
+  background-size: cover;
 }
 
-
 .home-container {
-    background-color: black;
-    padding: 50px;
+  background-color: black;
+  padding: 50px;
 }
 
 .prodotti {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1000px;
-    margin: 0 auto;
-
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 h5 {
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
 
 .card {
-    width: calc(100% / 6 - 20px);
-    margin: 10px;
-
+  width: calc(16.6666666667% - 20px);
+  margin: 10px;
 }
+
+.container-footer {
+  background-color: blue;
+  padding: 20px;
+}
+
+.card-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.card1 {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
+  color: white;
+}
+
+.card1 img {
+  width: 50px;
+}
+
+.card1 .img-svg {
+  width: 60px;
+}
+
