--- a/laravel-comics/resources/sass/partials/home.scss
+++ b/laravel-comics/resources/sass/partials/home.scss
@@ -1,15 +1,24 @@
 
-.prodotti{
- display: flex;
- flex-wrap: wrap;
+.home-container {
+    background-color: black;
+    padding: 50px;
 }
 
-.card{
-    width: calc(100% / 3 - 20px);
+.prodotti {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 0 auto;
+
+}
+
+h5 {
+    color: white;
+    text-align: center;
+}
+
+.card {
+    width: calc(100% / 6 - 20px);
     margin: 10px;
-    background-color: white;
-    border: 1px solid black;
-    img{
-        width: 100%;
-    }
+
 }
