--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -1,9 +1,9 @@
 .blue {
-  background-color: blue;
+  background-color: hsl(209deg, 100%, 49%);
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -21,7 +21,7 @@
 
 .container2 {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
@@ -40,6 +40,11 @@ ul {
 
 ul li {
   padding: 0 10px;
+}
+
+ul li:hover {
+  border-bottom: 5px;
+  color: blue;
 }
 
 img {
@@ -74,7 +79,7 @@ h5 {
 }
 
 .container-footer {
-  background-color: blue;
+  background-color: hsl(209deg, 100%, 49%);
   padding: 20px;
 }
 
@@ -99,5 +104,100 @@ h5 {
 
 .card1 .img-svg {
   width: 60px;
+}
+
+.card1 span {
+  color: white;
+}
+
+.menu-footer {
+  display: flex;
+  color: white;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.logo-footer img {
+  width: 305px;
+  margin-top: -25px;
+  margin-bottom: -25px;
+}
+
+.menu-list {
+  display: flex;
+}
+
+li {
+  list-style-type: none;
+  padding: 2px 0;
+}
+
+li a {
+  color: rgb(201, 192, 192);
+  text-decoration: none;
+  font-size: 12px;
+}
+
+li a:hover {
+  text-decoration: underline;
+}
+
+.content-list {
+  padding: 20px 30px;
+}
+
+.content-list h3 {
+  padding: 10px 0;
+  margin-left: 10px;
+}
+
+.menu-list ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.bg-dark {
+  background-color: hsl(240deg, 1%, 19%);
+}
+
+.second-footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+.signup button {
+  color: white;
+  border: 2px solid hsl(209deg, 100%, 49%);
+  padding: 10px 15px;
+  background-color: hsl(240deg, 1%, 19%);
+  margin-right: 240px;
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+}
+
+.icon h3 {
+  color: hsl(209deg, 100%, 49%);
+  padding: 0px 20px;
+}
+
+.icon img {
+  padding: 0px 10px;
+}
+
+.icon img:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
