--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -4,4 +4,6 @@
 @import 'partials/header3.scss';
 @import 'partials/home.scss';
 @import 'partials/footer1.scss';
+@import 'partials/footer2.scss';
+@import 'partials/footer3.scss'
 
