--- a/laravel-comics/resources/sass/partials/footer1.scss
+++ b/laravel-comics/resources/sass/partials/footer1.scss
@@ -1,5 +1,5 @@
 .container-footer{
-background-color: blue;
+background-color: hsl(209deg 100% 49%);
 padding: 20px;
 }
 
@@ -24,4 +24,8 @@ justify-content: space-around;
     width:60px;
 
    }
+}
+
+.card1 span{
+color: white;
 }
