--- a/laravel-comics/resources/sass/partials/header1.scss
+++ b/laravel-comics/resources/sass/partials/header1.scss
@@ -1,9 +1,9 @@
 .blue{
-background-color: blue;
+background-color: hsl(209deg 100% 49%);
 }
 
 .container{
-max-width: 1200px;
+max-width: 1000px;
 margin: 0 auto;
 display: flex;
 justify-content: space-between;
