--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -11,6 +11,12 @@
 
 .container span {
   color: white;
+}
+
+.flex-header {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
 
 * {
@@ -30,21 +36,22 @@
 
 span {
   color: black;
+  cursor: pointer;
 }
 
-ul {
+.container2 ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
 }
 
-ul li {
+.container2 ul li {
   padding: 0 10px;
+  cursor: pointer;
 }
 
-ul li:hover {
-  border-bottom: 5px;
-  color: blue;
+.container2 ul li:hover {
+  border-bottom: 5px solid aqua;
 }
 
 img {
