--- a/laravel-comics/resources/sass/partials/header1.scss
+++ b/laravel-comics/resources/sass/partials/header1.scss
@@ -3,7 +3,7 @@ background-color: hsl(209deg 100% 49%);
 }
 
 .container{
-max-width: 1000px;
+max-width: 1100px;
 margin: 0 auto;
 display: flex;
 justify-content: space-between;
@@ -11,4 +11,9 @@ justify-content: space-between;
 
 .container span{
 color: white;
+}
+
+.flex-header{
+display: flex;
+column-gap: 20px;
 }
